--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
                 <label for="password" class="form-label"> Contraseña </label>
                 <input type="password" id="password" class="form-control" required>
             </div>
-            <button type="submit" class="btn btn-info"> Ingresar </button>
+            <button type="submit" class="btn btn-info" onclick="login(); return false;"> Ingresar </button>
         </form>
     </main>
     
