--- a/registro.html
+++ b/registro.html
@@ -16,7 +16,7 @@
     <div class="container mt-5">
         <h2 class="text-center">Registro</h2>
 
-        <form id="registerForm" class="mb-4">
+        <form id="registerForm" class="mb-4" onsubmit="registerUsuario(); return false;">
             <input type="hidden" id="usuario">
             <div class="mb-3">
                 <label class="form-label">Nombre</label>
@@ -57,7 +57,7 @@
                 <label class="form-label">Pin</label>
                 <input type="password" class="form-control" id="pin" minlength="6" required>
             </div>
-            <center><button type="button" class="btn btn-info" onclick="createUsuarios(); return false;"> Guardar </button></center>
+            <center><button type="button" class="btn btn-info"> Guardar </button></center>
         </form>
     </div>
 
@@ -65,8 +65,8 @@
     <div id="footer-placeholder"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../Backend/js/validaciones.js"></script>
-    <script src="../Backend/js/functions.js"></script>
+    <!-- <script src="../Backend/js/validaciones.js"></script> -->
+    <script src="js/functionsAuth.js"></script>
     <script src="js/functionLayout.js"></script>
     <script src="js/functionsFooter.js"></script>
 </body>
