--- a/registro.html
+++ b/registro.html
@@ -57,7 +57,7 @@
                 <label class="form-label">Pin</label>
                 <input type="password" class="form-control" id="pin" minlength="6" required>
             </div>
-            <center><button type="button" class="btn btn-info"> Guardar </button></center>
+            <center><button type="button" class="btn btn-info" onclick="registerUsuario(); return false;"> Guardar </button></center>
         </form>
     </div>
 
