--- a/inicio.html
+++ b/inicio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,41 +10,47 @@
     <link href="css/styleFooter.css" rel="stylesheet">
     <link href="css/styleLayout.css" rel="stylesheet">
 </head>
+
 <body>
     <!-- El layout se cargará aquí -->
     <div id="layout-placeholder"></div>
 
     <main class="container my-4 text-center py-3" id="main-content">
         <h1>Pantalla de Inicio</h1>
-            <!-- Aquí se cargarán los avatars de los usuarios restringidos -->
+        <!-- Aquí se cargarán los avatars de los usuarios restringidos -->
         </div>
         <button class="btn btn-primary my-3" onclick="showAdminPinPrompt()">Administración</button>
     </main>
-    
+
     <!-- Placeholder para el footer -->
     <div id="footer-placeholder"></div>
 
     <!-- Modal para ingresar el PIN -->
-    <div class="modal fade" id="pinModal" tabindex="-1" aria-labelledby="pinModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="pinModalLabel">Ingresar PIN</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <input type="password" id="adminPin" class="form-control" placeholder="Ingrese su PIN">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary" onclick="validateAdminPin()">Validar</button>
+    <form id="login-form" onsubmit="validateAdminPin(); return false;">
+
+        <div class="modal fade" id="pinModal" tabindex="-1" aria-labelledby="pinModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="pinModalLabel">Ingresar PIN</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <input type="password" id="pin" class="form-control" placeholder="Ingrese su PIN">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                        <button type="button" id="validarPinButton" class="btn btn-primary">Validar</button>
+                    </div>
                 </div>
             </div>
-        </div>
+    </form>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/functionLayout.js"></script>
     <script src="js/functionsAuth.js"></script>
     <script src="js/functionsFooter.js"></script>
-    <script src="js/functionsInicio.js"></script> <!-- Archivo JavaScript para la funcionalidad de la pantalla de inicio -->
+    <script src="js/functionsInicio.js"></script>
+    <!-- Archivo JavaScript para la funcionalidad de la pantalla de inicio -->
 </body>
+
 </html>
