--- a/login.html
+++ b/login.html
@@ -17,12 +17,12 @@
         <h1>Iniciar Sesión</h1>
         <form id="login-form" onsubmit="loginUsuario(); return false;">
             <div class="mb-3">
-                <label for="user" class="form-label"> Usuario </label>
-                <input type="text" id="user" class="form-control" required>
+                <label for="correo" class="form-label"> Usuario </label>
+                <input type="text" id="correo" class="form-control" required>
             </div>
             <div class="mb-3">
-                <label for="password" class="form-label"> Contraseña </label>
-                <input type="password" id="password" class="form-control" required>
+                <label for="contraseña" class="form-label"> Contraseña </label>
+                <input type="password" id="contraseña" class="form-control" required>
             </div>
             <button type="submit" class="btn btn-info"> Ingresar </button>
         </form>
