--- a/inicio.html
+++ b/inicio.html
@@ -26,23 +26,20 @@
     <div id="footer-placeholder"></div>
 
     <!-- Modal para ingresar el PIN -->
-    <form id="login-form" onsubmit="validateAdminPin(); return false;">
-
-        <div class="modal fade" id="pinModal" tabindex="-1" aria-labelledby="pinModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="pinModalLabel">Ingresar PIN</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <input type="password" id="pin" class="form-control" placeholder="Ingrese su PIN">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                        <button type="button" id="validarPinButton" class="btn btn-primary">Validar</button>
-                    </div>
+    <div class="modal fade" id="pinModal" tabindex="-1" aria-labelledby="pinModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="pinModalLabel">Ingresar PIN</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <input type="password" id="pin" class="form-control" placeholder="Ingrese su PIN">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="button" id="validarPinButton" class="btn btn-primary" onclick="validateAdminPin()">Validar</button>
                 </div>
             </div>
-    </form>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
