--- a/inicio.html
+++ b/inicio.html
@@ -18,6 +18,7 @@
     <main class="container my-4 text-center py-3" id="main-content">
         <h1>Pantalla de Inicio</h1>
         <!-- Aquí se cargarán los avatars de los usuarios restringidos -->
+         <div id="avatars-container" class="d-flex justify-content-center flex-wrap"></div>
         </div>
         <button class="btn btn-primary my-3" onclick="showAdminPinPrompt()">Administración</button>
     </main>
@@ -41,13 +42,14 @@
             </div>
         </div>
     </div>
-
+    
+    <!-- Archivo JavaScript para la funcionalidad de la pantalla de inicio -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/functionLayout.js"></script>
     <script src="js/functionsAuth.js"></script>
     <script src="js/functionsFooter.js"></script>
     <script src="js/functionsInicio.js"></script>
-    <!-- Archivo JavaScript para la funcionalidad de la pantalla de inicio -->
+    
 </body>
 
 </html>
