--- a/playlist.html
+++ b/playlist.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Usuarios Restringidos </title>
+    <title> Gestion playlist </title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styleFooter.css" rel="stylesheet">
     <link href="css/styleLayout.css" rel="stylesheet">
-    <script src="../Backend/js/functions.js"></script>
+    <script src="../Backend/js/functionPlaylist.js"></script>
     <link rel="stylesheet" href="../Backend/css/style.css"></head>
 
 <body>
@@ -17,10 +17,10 @@
     <div id="layout-placeholder"></div>
 
     <div class="container my-4 text-center py-3" id="main-content">
-        <h1>Usuarios Restringidos Registrados</h1>
+        <h1> Gestion playlist </h1>
         <ul id="result"></ul>
-        <button onclick="window.location.href='usuarioRestringido.html'" class=" btn btn-primary my-2">Agregar</button>
-        <button onclick="restringidoGet(); return false;" class="btn btn-success my-2">Ver usuarios restringidos</button>
+        <button onclick="window.location.href='gestionPlaylist.html'" class=" btn btn-primary my-2">Agregar</button>
+        <button onclick="playGet(); return false;" class="btn btn-success my-2">Ver playlist</button>
     </div>
 
     <!-- Placeholder para el footer -->
