--- a/playlistUsuarioRestringido.html
+++ b/playlistUsuarioRestringido.html
@@ -4,32 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Gestion playlist </title>
+    <title>Listas de Reproducción</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styleFooter.css" rel="stylesheet">
     <link href="css/styleLayout.css" rel="stylesheet">
-    <script src="../Backend/js/functionPlaylist.js"></script>
-    <link rel="stylesheet" href="../Backend/css/style.css"></head>
+</head>
 
 <body>
     <!-- El layout se cargará aquí -->
     <div id="layout-placeholder"></div>
 
-    <div class="container my-4 text-center py-3" id="main-content">
-        <h1> Gestion playlist </h1>
+    <div class="container my-4">
+        <h1 class="text-center">Listas de Reproducción</h1>
         <input type="text" id="search-input" class="form-control mb-3" placeholder="Buscar videos...">
-        <ul id="result"></ul>
-        <button onclick="window.location.href='gestionPlaylist.html'" class=" btn btn-primary my-2">Agregar</button>
-        <button onclick="playGet(); return false;" class="btn btn-success my-2">Ver playlist</button>
+        <div id="playlists-container" class="list-group"></div>
     </div>
 
     <!-- Placeholder para el footer -->
     <div id="footer-placeholder"></div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/functionLayout.js"></script>
     <script src="js/functionsFooter.js"></script>
+    <script src="js/functionsPlaylists.js"></script>
     <script src="js/functionsBusqueda.js"></script>
 </body>
 
