Añadiendo vista de videos, aún sin completar

--- a/playlistUsuarioRestringido.html
+++ b/playlistUsuarioRestringido.html
@@ -28,6 +28,7 @@
     <script src="js/functionsFooter.js"></script>
     <script src="js/functionsPlaylists.js"></script>
     <script src="js/functionsBusqueda.js"></script>
+    <script src="js/functionsAuth.js"></script>
 </body>
 
 </html>
