--- a/usuarioRestringido.html
+++ b/usuarioRestringido.html
@@ -71,6 +71,7 @@
     <script src="../Backend/js/functions.js"></script>
     <script src="js/functionLayout.js"></script>
     <script src="js/functionsFooter.js"></script>
+    <script src="js/functionsAuth.js"></script>
     <script>
         // Bootstrap validation
         (function () {
