--- a/gestionPlaylist.html
+++ b/gestionPlaylist.html
@@ -68,6 +68,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
         <script src="js/functionLayout.js"></script>
         <script src="js/functionsFooter.js"></script>
+        <script src="js/functionsAuth.js"></script>
         <script>
             // Bootstrap validation
             (function () {
