--- a/playlist.html
+++ b/playlist.html
@@ -31,6 +31,7 @@
     <script src="js/functionLayout.js"></script>
     <script src="js/functionsFooter.js"></script>
     <script src="js/functionsBusqueda.js"></script>
+    <script src="js/functionsAuth.js"></script>
 </body>
 
 </html>
