--- a/restringido.html
+++ b/restringido.html
@@ -7,8 +7,8 @@
     <title> Usuarios Restringidos </title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/styleFooter.css" rel="stylesheet">
-    <link href="css/styleLayout.css" rel="stylesheet">
+    <link href="../css/styleFooter.css" rel="stylesheet">
+    <link href="../css/styleLayout.css" rel="stylesheet">
     <script src="../Backend/js/functions.js"></script>
     <link rel="stylesheet" href="../Backend/css/style.css"></head>
 
@@ -27,8 +27,9 @@
     <div id="footer-placeholder"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/functionLayout.js"></script>
-    <script src="js/functionsFooter.js"></script>
+    <script src="../js/functionLayout.js"></script>
+    <script src="../js/functionsFooter.js"></script>
+    <script src="../js/functionsAuth.js"></script>
 </body>
 
 </html>
