--- a/video.html
+++ b/video.html
@@ -22,7 +22,7 @@
     </div>
 
     <!-- Modal para agregar/editar video -->
-    <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="videoModalLabel">
+    <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="videoModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -57,7 +57,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/functionLayout.js"></script>
     <script src="js/functionsFooter.js"></script>
-    <script src="js/functionsVideo.js"></script>
+    <script src="../Backend/js/functionsVideo.js"></script>
 </body>
 
 </html>
