--- a/video.html
+++ b/video.html
@@ -17,6 +17,7 @@
 
     <div class="container my-4">
         <h1 class="text-center">Videos</h1>
+        <input type="text" id="search-input" class="form-control mb-3" placeholder="Buscar videos...">
         <button class="btn btn-primary mb-3" onclick="showAddVideoForm()">Agregar Nuevo Video</button>
         <div id="videos-container" class="list-group"></div>
     </div>
@@ -57,7 +58,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/functionLayout.js"></script>
     <script src="js/functionsFooter.js"></script>
-    <script src="../Backend/js/functionsVideo.js"></script>
+    <script src="js/functionsVideo.js"></script>
+    <script src="js/functionsBusqueda.js"></script>
 </body>
 
 </html>
