--- a/playlistUsuarioRestringido.html
+++ b/playlistUsuarioRestringido.html
@@ -18,7 +18,8 @@
     <div class="container my-4">
         <h1 class="text-center">Listas de Reproducción</h1>
         <input type="text" id="search-input" class="form-control mb-3" placeholder="Buscar videos...">
-        <div id="playlists-container" class="list-group"></div>
+        <button onclick="searchVideos()" class="btn btn-info mb-3"> Buscar </button>
+        <div id="videos-container" class="list-group"></div>
     </div>
 
     <!-- Placeholder para el footer -->
