--- a/video.html
+++ b/video.html
@@ -17,6 +17,7 @@
 
     <div class="container my-4">
         <h1 class="text-center">Videos</h1>
+        <button class="btn btn-primary mb-3" onclick="showAddVideoForm()"> Agregar Nuevo Video </button>
         <input type="text" id="search-input" class="form-control mb-3" placeholder="Buscar videos...">
         <button onclick="searchVideos()" class="btn btn-info mb-3"> Buscar </button>
         <div id="videos-container" class="list-group"></div>
