--- a/actualizarRestringido.html
+++ b/actualizarRestringido.html
@@ -18,7 +18,6 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Actualizacion de Usuario</title>
-        <link href="../Backend/css/style.css" rel="stylesheet">
     </head>
 
     <body>
@@ -40,22 +39,22 @@
 
             <label id="avatar"> Selecciona su avatar: </label>
             <div>
-                <img src="../Backend/img/avatar_1.png" alt="avatar_1" width="80px" height="80px"
+                <img src="img/avatar_1.png" alt="avatar_1" width="80px" height="80px"
                     onclick="selectAvatar('/img/avatar_1.png')">
 
-                <img src="../Backend/img/avatar_2.jpg" alt="avatar_2" width="80px" height="80px"
+                <img src="img/avatar_2.jpg" alt="avatar_2" width="80px" height="80px"
                     onclick="selectAvatar('/img/avatar_2.jpg')">
 
-                <img src="../Backend/img/avatar_3.jpg" alt="avatar_3" width="80px" height="80px"
+                <img src="img/avatar_3.jpg" alt="avatar_3" width="80px" height="80px"
                     onclick="selectAvatar('/img/avatar_3.jpg')">
 
-                <img src="../Backend/img/avatar_4.png" alt="avatar_4" width="80px" height="80px"
+                <img src="img/avatar_4.png" alt="avatar_4" width="80px" height="80px"
                     onclick="selectAvatar('/img/avatar_4.png')">
 
-                <img src="../Backend/img/avatar_5.jpg" alt="avatar_5" width="80px" height="80px"
+                <img src="img/avatar_5.jpg" alt="avatar_5" width="80px" height="80px"
                     onclick="selectAvatar('/img/avatar_5.jpg')">
 
-                <img src="../Backend/img/avatar_6.png" alt="avatar_6" width="80px" height="80px"
+                <img src="img/avatar_6.png" alt="avatar_6" width="80px" height="80px"
                     onclick="selectAvatar('/img/avatar_6.png')" </div>
 
                 <input type="hidden" id="avatar" name="avatar" value="/img/avatar_1.png">
@@ -67,9 +66,9 @@
 
                 <button type="button" onclick="restringidoUpdate();">Actualizar</button>
         </form>
-        <script src="../Backend/js/functionRestringido.js"></script>
-        <script src="../Backend/js/functionsAvatar.js"></script>
-        <script src="../Backend/js/functions.js"></script>
+        <script src="js/functionRestringido.js"></script>
+        <script src="js/functionsAvatar.js"></script>
+        <script src="js/functionRestringido.js"></script>
     </body>
 
     </html>
