--- a/agregarVideo.html
+++ b/agregarVideo.html
@@ -44,8 +44,9 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="../Backend/js/functionVideo.js"></script>
-    <script src="../Backend/js/funtionGestionVideo.js"></script>
+    <script type="module" src="js/functionsVideo.js"></script>
+    <script src="js/funtionGestionVideo.js"></script>
+    <script src="js/functionsAuth.js"></script>
 </body>
 
 </html>
