--- a/editPlaylist.html
+++ b/editPlaylist.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styleFooter.css" rel="stylesheet">
     <link href="css/styleLayout.css" rel="stylesheet">
-    <script src="../Backend/js/functionPlaylist.js" defer></script>
+    <script src="js/functionPlaylist.js" defer></script>
 
     <style>
         .container {
@@ -68,6 +68,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
         <script src="js/functionLayout.js"></script>
         <script src="js/functionsFooter.js"></script>
+        <script src="js/functionsAuth.js"></script>
         <script>
             // Bootstrap validation
             (function () {
