--- a/gestionPlaylist.html
+++ b/gestionPlaylist.html
@@ -9,7 +9,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styleFooter.css" rel="stylesheet">
     <link href="css/styleLayout.css" rel="stylesheet">
-    <script src="../Backend/js/functionPlaylist.js" defer></script>
 
     <style>
         .container {
@@ -69,6 +68,7 @@
         <script src="js/functionLayout.js"></script>
         <script src="js/functionsFooter.js"></script>
         <script src="js/functionsAuth.js"></script>
+        <script src="js/functionsPlaylist.js"></script>
         <script>
             // Bootstrap validation
             (function () {
