--- a/panelVideos.html
+++ b/panelVideos.html
@@ -9,8 +9,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styleFooter.css" rel="stylesheet">
     <link href="css/styleLayout.css" rel="stylesheet">
-    <script src="../Backend/js/functionPlaylist.js"></script>
-    <link rel="stylesheet" href="../Backend/css/style.css"></head>
 
 <body>
     <!-- El layout se cargará aquí -->
@@ -22,7 +20,7 @@
         <button onclick="searchVideos()" class="btn btn-info "> Buscar </button>
         <div id="videos-container" class="list-group"></div>
         <ul id="result"></ul>
-        <button onclick="playlistGet()" class="btn btn-success ">Ver playlist</button>
+        <button onclick="playGetByUserId()" class="btn btn-success ">Ver playlist</button>
     </div>
 
     <!-- Placeholder para el footer -->
@@ -33,7 +31,8 @@
     <script src="js/functionsFooter.js"></script>
     <script src="js/functionsBusqueda.js"></script>
     <script src="js/functionsAuth.js"></script>
-    <script src="../Backend/js/funtionGestionVideo.js"></script>
+    <script src="js/functionsPlaylist.js"></script>
+    <script src="js/funtionGestionVideo.js"></script>
 </body>
 
 </html>
