--- a/playlist.html
+++ b/playlist.html
@@ -9,8 +9,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styleFooter.css" rel="stylesheet">
     <link href="css/styleLayout.css" rel="stylesheet">
-    <script src="../Backend/js/functionPlaylist.js"></script>
-    <link rel="stylesheet" href="../Backend/css/style.css"></head>
 
 <body>
     <!-- El layout se cargará aquí -->
@@ -22,7 +20,8 @@
         <button onclick="searchVideos()" class="btn btn-info mb-3"> Buscar </button>
         <div id="videos-container" class="list-group"></div>
         <button onclick="window.location.href='gestionPlaylist.html'" class=" btn btn-primary my-2">Agregar</button>
-        <button onclick="playGet(); return false;" class="btn btn-success my-2">Ver playlist</button>
+        <button onclick="playGetByUserId()" class="btn btn-success ">Ver playlist</button>    
+        <ul id="result"></ul>
     </div>
 
     <!-- Placeholder para el footer -->
@@ -33,6 +32,7 @@
     <script src="js/functionsFooter.js"></script>
     <script src="js/functionsBusqueda.js"></script>
     <script src="js/functionsAuth.js"></script>
+    <script src="js/functionsPlaylist.js"></script>
 </body>
 
 </html>
