--- a/playlistUsuarioRestringido.html
+++ b/playlistUsuarioRestringido.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listas de Reproducción</title>
+    <title>Playlist</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styleFooter.css" rel="stylesheet">
@@ -15,21 +15,31 @@
     <!-- El layout se cargará aquí -->
     <div id="layout-placeholder"></div>
 
-    <div class="container my-4">
-        <h1 class="text-center">Listas de Reproducción</h1>
-        <input type="text" id="search-input" class="form-control mb-3" placeholder="Buscar videos...">
-        <button onclick="searchVideos()" class="btn btn-info mb-3"> Buscar </button>
-        <div id="videos-container" class="list-group"></div>
-    </div>
+    <main class="container my-4 text-center py-3" id="main-content">
+        <h1>Playlist</h1>
+        <!-- Aquí se cargarán las playlists del usuario restringido -->
+        <ul id="result" class="list-group"></ul>
+    </main>
 
     <!-- Placeholder para el footer -->
     <div id="footer-placeholder"></div>
 
+    <!-- Archivo JavaScript para la funcionalidad de la playlist -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/functionLayout.js"></script>
-    <script src="js/functionsFooter.js"></script>
-    <script src="js/functionsPlaylists.js"></script>
-    <script src="js/functionsBusqueda.js"></script>
     <script src="js/functionsAuth.js"></script>
+    <script src="js/functionsFooter.js"></script>
+    <script src="js/functionsPlaylist.js"></script>
+    <script>
+        // Obtener el ID del usuario restringido desde la URL
+        const urlParams = new URLSearchParams(window.location.search);
+        const userId = urlParams.get('userId');
+
+        // Cargar la playlist del usuario restringido al cargar la página
+        document.addEventListener('DOMContentLoaded', async () => {
+            await playGetByUserId(userId);
+        });
+    </script>
 </body>
 
 </html>
