--- a/restringido.html
+++ b/restringido.html
@@ -9,8 +9,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/styleFooter.css" rel="stylesheet">
     <link href="../css/styleLayout.css" rel="stylesheet">
-    <script src="../Backend/js/functions.js"></script>
-    <link rel="stylesheet" href="../Backend/css/style.css"></head>
 
 <body>
     <!-- El layout se cargará aquí -->
@@ -30,6 +28,7 @@
     <script src="../js/functionLayout.js"></script>
     <script src="../js/functionsFooter.js"></script>
     <script src="../js/functionsAuth.js"></script>
+    <script src="js/functionRestringido.js"></script>
 </body>
 
 </html>
