--- a/usuarioRestringido.html
+++ b/usuarioRestringido.html
@@ -9,7 +9,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styleFooter.css" rel="stylesheet">
     <link href="css/styleLayout.css" rel="stylesheet">
-    <link href="../Backend/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -46,16 +45,16 @@
             <div class="mb-3">
                 <label class="form-label">Selecciona su avatar:</label>
                 <div class="d-flex flex-wrap">
-                    <img src="../Backend/img/avatar_1.png" alt="avatar_1" class="img-thumbnail m-1" width="80px" height="80px" onclick="selectAvatar('/img/avatar_1.png')">
-                    <img src="../Backend/img/avatar_2.jpg" alt="avatar_2" class="img-thumbnail m-1" width="80px" height="80px" onclick="selectAvatar('/img/avatar_2.jpg')">
-                    <img src="../Backend/img/avatar_3.jpg" alt="avatar_3" class="img-thumbnail m-1" width="80px" height="80px" onclick="selectAvatar('/img/avatar_3.jpg')">
-                    <img src="../Backend/img/avatar_4.png" alt="avatar_4" class="img-thumbnail m-1" width="80px" height="80px" onclick="selectAvatar('/img/avatar_4.png')">
-                    <img src="../Backend/img/avatar_5.jpg" alt="avatar_5" class="img-thumbnail m-1" width="80px" height="80px" onclick="selectAvatar('/img/avatar_5.jpg')">
-                    <img src="../Backend/img/avatar_6.png" alt="avatar_6" class="img-thumbnail m-1" width="80px" height="80px" onclick="selectAvatar('/img/avatar_6.png')">
+                    <img src="img/avatar_1.png" alt="avatar_1" class="img-thumbnail m-1" width="80px" height="80px" onclick="selectAvatar('/img/avatar_1.png')">
+                    <img src="img/avatar_2.jpg" alt="avatar_2" class="img-thumbnail m-1" width="80px" height="80px" onclick="selectAvatar('/img/avatar_2.jpg')">
+                    <img src="img/avatar_3.jpg" alt="avatar_3" class="img-thumbnail m-1" width="80px" height="80px" onclick="selectAvatar('/img/avatar_3.jpg')">
+                    <img src="img/avatar_4.png" alt="avatar_4" class="img-thumbnail m-1" width="80px" height="80px" onclick="selectAvatar('/img/avatar_4.png')">
+                    <img src="img/avatar_5.jpg" alt="avatar_5" class="img-thumbnail m-1" width="80px" height="80px" onclick="selectAvatar('/img/avatar_5.jpg')">
+                    <img src="img/avatar_6.png" alt="avatar_6" class="img-thumbnail m-1" width="80px" height="80px" onclick="selectAvatar('/img/avatar_6.png')">
                 </div>
             </div>
 
-            <input type="hidden" id="avatar" name="avatar" value="/img/avatar_1.png">
+            <input type="hidden" id="avatar" name="avatar" value="img/avatar_1.png">
 
             <div class="d-flex justify-content-between">
                 <button type="submit" class="btn btn-primary" onclick="restringidoPost();">Registrar</button>
@@ -67,8 +66,8 @@
     <!-- Placeholder para el footer -->
     <div id="footer-placeholder"></div>
 
-    <script src="../Backend/js/functionsAvatar.js"></script>
-    <script src="../Backend/js/functions.js"></script>
+    <script src="js/functionsAvatar.js"></script>
+    <script src="js/functionRestringido.js"></script>
     <script src="js/functionLayout.js"></script>
     <script src="js/functionsFooter.js"></script>
     <script src="js/functionsAuth.js"></script>
