--- a/registro.html
+++ b/registro.html
@@ -46,7 +46,7 @@
             </div>
             <div class="mb-3">
                 <label class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="contraseña" required>
+                <input type="password" class="form-control" id="contrasena" required>
                 <span id="passwordError" style="color: red;"></span>
             </div>
             <div class="mb-3">
@@ -57,7 +57,7 @@
                 <label class="form-label">Pin</label>
                 <input type="password" class="form-control" id="pin" minlength="6" required>
             </div>
-            <center><button type="button" class="btn btn-info" onclick="registerUsuario(); return false;"> Guardar </button></center>
+            <center><button type="button" class="btn btn-info" onclick="saveUsuario()"> Guardar </button></center>
         </form>
     </div>
 
@@ -66,8 +66,10 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- <script src="../Backend/js/validaciones.js"></script> -->
-    <script src="js/functionsAuth.js"></script>
+    <!--<script src="js/functionsAuth.js"></script>-->
+    <script src="app.js"></script>
     <script src="js/functionLayout.js"></script>
     <script src="js/functionsFooter.js"></script>
+
 </body>
 </html>
