--- a/registro.html
+++ b/registro.html
@@ -15,9 +15,7 @@
 
     <div class="container mt-5">
         <h2 class="text-center">Registro</h2>
-
-        <form id="registerForm" class="mb-4" onsubmit="registerUsuario(); return false;">
-            <input type="hidden" id="usuario">
+        <form>
             <div class="mb-3">
                 <label class="form-label">Nombre</label>
                 <input type="text" class="form-control" id="nombre" required>
