--- a/registro.html
+++ b/registro.html
@@ -46,7 +46,7 @@
             </div>
             <div class="mb-3">
                 <label class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="contraseña" required>
+                <input type="password" class="form-control" id="contrasena" required>
                 <span id="passwordError" style="color: red;"></span>
             </div>
             <div class="mb-3">
