--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
             </div>
             <div class="mb-3">
                 <label for="contraseña" class="form-label"> Contraseña </label>
-                <input type="password" id="contraseña" class="form-control" required>
+                <input type="password" id="contrasena" class="form-control" required>
             </div>
             <button type="submit" class="btn btn-info"> Ingresar </button>
         </form>
