Vista de registro con Google

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <a href="login.html" class="btn btn-info my-2">Inicio de Sesión</a>
         <h3>Si no tienes cuenta, regístrate</h3>
         <a href="registro.html" class="btn btn-success my-2">Registro</a>
+        <h3>O regístrate con tu cuenta de Google</h3>
+        <a href="http://localhost:3001/auth/google" class="btn btn-danger my-2">Registrarse con Google</a>
     </main>
 
     <!-- Placeholder para el footer -->
