--- a/registroGoogle.html
+++ b/registroGoogle.html
@@ -78,7 +78,7 @@
       .then(res => res.json())
       .then(data => {
         if (data.success) {
-          window.location.href = '/inicio.html';
+          window.location.href = '/login.html';
         } else {
           alert('Hubo un error al completar el registro.');
         }
