Login con Google listo

--- a/login.html
+++ b/login.html
@@ -27,10 +27,10 @@
                 <input type="password" id="contrasena" class="form-control" required>
             </div>
             <button type="submit" class="btn btn-info"> Ingresar </button>
-            <a href="http://localhost:3001/auth/google/login-success">
-                <button>Iniciar sesión con Google</button>
-            </a>
         </form>
+        <a href="http://localhost:3001/auth/google">
+            <button type="button" class="btn btn-danger">Iniciar sesión con Google</button>
+        </a>
     </main>
 
     <!-- Placeholder para el footer -->
